<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="259dp"
    android:layout_height="160dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".DeleteChoresDialog">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/deleteLowPriorityChoresCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/delete_low_priority_tasks" />
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_medium_priority_tasks"
            android:id="@+id/deleteMediumPriorityChoresCheckBox"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_high_priority_tasks"
            android:id="@+id/deleteHighPriorityChoresCheckBox"/>
    </LinearLayout>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteChoresPopupButton"
        android:text="@string/delete_tasks_button"
        android:enabled="false"
        android:layout_gravity="center"/>
</LinearLayout>